syntax = "proto3";

package viz;

import "google/protobuf/descriptor.proto";
import "google/protobuf/any.proto";

import "primitives.proto";


message Status {
    Text text = 1;
    Point3d point3d = 2;
    Point2d point2d = 3;
}

message Stream {
    string path = 1;
    string subject = 2;
    uint64 start_time = 3;
    uint64 end_time = 4;
    repeated StreamSet items = 5;
}

message StreamSet {
    uint64 timestamp = 1;
    oneof Schema {
        Status status = 2;
        Text text = 3;
        Point2d point2d = 4;
        Point3d point3d = 5;
        Image image = 6;
    }
}


message WSResponse {
    string path = 1;
    // Stream, ...
    google.protobuf.Any data = 2;
}